--- a/src/app/index.less
+++ b/src/app/index.less
@@ -1,5 +1,4 @@
-//@import "~antd/dist/antd.css";
-//@import "~prismjs/themes/prism-okaidia.css";
+//@import "~antd/dist/antd";
 
 //@border-radius-base: 0;
 //@border-radius-sm: 0;
